k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 348028092597.dkr.ecr.ap-northeast-2.amazonaws.com/auth:latest
        ports:
        - containerPort: 8001
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  selector:
    matchLabels:
      app: product
  replicas: 1
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: 348028092597.dkr.ecr.ap-northeast-2.amazonaws.com/product:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: 348028092597.dkr.ecr.ap-northeast-2.amazonaws.com/web:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
