k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
  - port: 8001
    targetPort: 8001
  selector:
    app: app
