k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aws-prototype
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: 	arn:aws:acm:ap-northeast-2:348028092597:certificate/12d642aa-29e2-4668-95c5-ce2618b2d539
  labels:
    app: aws-prototype
spec:
  rules:
  - http:
      paths:
      - path: /auth/*
        backend:
          serviceName: auth-service
          servicePort: 80
      - path: /product/*
        backend:
          serviceName: product-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: web-service
          servicePort: 80
